...
                    shape = RoundedCornerShape(15),
                    modifier = Modifier
                        .width(128.dp)
                        .height(46.dp),
                ) {
                    Text(
                        text = "Reset",
                        color = MaterialTheme.colorScheme.onPrimary,
                        style = MaterialTheme.typography.labelMedium,
                        fontSize = 18.sp,
                    )
                }
                Spacer(
...
                    .width(128.dp)
                    .height(46.dp),
                shape = RoundedCornerShape(15),
                colors = ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.primaryContainer),
            ) {
                Text(
                    text = "Exit",
                    style = MaterialTheme.typography.labelMedium,
                    color = MaterialTheme.colorScheme.onPrimary,
                    fontSize = 18.sp,
                    modifier = Modifier
                        .wrapContentHeight(),
                )
...
        Column(
            modifier = Modifier.fillMaxWidth(),
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
            Spacer(modifier = Modifier.height(100.dp))
            Text(
                text = "Tap the number of players.",
                color = MaterialTheme.colorScheme.secondary,
                textAlign = TextAlign.Center,
                style = MaterialTheme.typography.bodyMedium,
                lineHeight = 28.sp,
            )
            if (isPortrait) {
...
